src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West 237</fullName>
                </value>
                <value>
                    <fullName>Central 237</fullName>
                </value>
                <value>
                    <fullName>East 237</fullName>
                </value>
                <value>
                    <fullName>South 101</fullName>
                </value>
                <value>
                    <fullName>Northwest Mountain View</fullName>
                </value>
                <value>
                    <fullName>East Mountain View</fullName>
                </value>
                <value>
                    <fullName>North San Jose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_with_Marketo__c</fullName>
        <label>Contacts Synced with Marketo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <label>Tour (Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trending_Status__c</fullName>
        <inlineHelpText>Pick a value that describes the current trending status for this account.</inlineHelpText>
        <label>Trending Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Trending_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for uploads to trigger automation.</inlineHelpText>
        <label>Trigger Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighted_Lives__c</fullName>
        <formula>Near_Site_Opportunity__r.Weighted_Number_of_Lives__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Monthly_Value__c</fullName>
        <formula>Weighted_Number_of_Lives__c *  PEPM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Weighted Number of Lives * PEPM</inlineHelpText>
        <label>Weighted Monthly Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Number_of_Lives__c</fullName>
        <formula>Number_of_Lives__c *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Number of Lives * Probability</inlineHelpText>
        <label>Weighted Number of Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XO_Score__c</fullName>
        <formula>AnnualRevenue/1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XO Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Account_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zcrm_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>zcrm_Account_Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Account_Management</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Broker_Consultant</value>
        </filters>
        <label>Account Management</label>
    </listViews>
    <listViews>
        <fullName>Account_Owner</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Client_Relationship_Input__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>mcfarlane</value>
        </filters>
        <label>Account Owner</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Not_Owned_by_Chad_D_or_Jane_C</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>cdesh</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>jlee</value>
        </filters>
        <label>Accounts Not Owned by C.Deshler - J.Choe</label>
    </listViews>
    <listViews>
        <fullName>Accounts_old_architecture_with_products</fullName>
        <columns>Account_ID_Copy__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Probability_formula__c</columns>
        <columns>Products__c</columns>
        <columns>Locations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Near_Site_Opportunity__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Products__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accounts using old architecture w/ prods</label>
    </listViews>
    <listViews>
        <fullName>Accounts_using_old_architecture</fullName>
        <columns>Account_ID_Copy__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>Stage__c</columns>
        <columns>Probability_formula__c</columns>
        <columns>Products__c</columns>
        <columns>Locations__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Near_Site_Opportunity__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accounts still using old architecture</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Lead_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locations__c</field>
            <operation>contains</operation>
            <value>AZ</value>
        </filters>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>All_Clinics</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Clinic</value>
        </filters>
        <label>All Clinics</label>
    </listViews>
    <listViews>
        <fullName>All_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>All_OS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Opportunity_Type_NS_OS__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Amount__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Type_NS_OS__c</field>
            <operation>equals</operation>
            <value>Onsite</value>
        </filters>
        <label>All Onsiite Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Office_Locations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>Opportunity_Type_NS_OS__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Amount__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Office_Location</value>
        </filters>
        <label>All Office Locations</label>
    </listViews>
    <listViews>
        <fullName>All_Office_Locations_NS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>Opportunity_Type_NS_OS__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Amount__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Office_Location</value>
        </filters>
        <filters>
            <field>Near_Site_Opportunity__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Office Locations-Nearsite only</label>
    </listViews>
    <listViews>
        <fullName>All_Office_Locations_OS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>Opportunity_Type_NS_OS__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Amount__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Office_Location</value>
        </filters>
        <filters>
            <field>Opportunity_Type_NS_OS__c</field>
            <operation>equals</operation>
            <value>Onsite</value>
        </filters>
        <label>All Office Locations-Onsiite only</label>
    </listViews>
    <listViews>
        <fullName>All_Office_Locations_Unknown</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Near_Site_Opportunity__c</columns>
        <columns>Opportunity_Type_NS_OS__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Amount__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Near_Site_Neighborhood_old__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Office_Location</value>
        </filters>
        <filters>
            <field>Opportunity_Type_NS_OS__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Office Locations-Unknown opp type</label>
    </listViews>
    <listViews>
        <fullName>Amazon_accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Live_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Amazon</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Office_Location</value>
        </filters>
        <label>Amazon accounts</label>
    </listViews>
    <listViews>
        <fullName>Customers_Signed</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Live_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <filters>
            <field>Client_Relationship_Input__c</field>
            <operation>equals</operation>
            <value>Existing Client</value>
        </filters>
        <label>Customers Currently Signed</label>
    </listViews>
    <recordTypes>
        <fullName>Broker_Consultant</fullName>
        <active>true</active>
        <label>Broker/Consultant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Broker_Consultant_Office_Location</fullName>
        <active>true</active>
        <description>A Child to a Broker/Consultant Account</description>
        <label>Broker/Consultant Office Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Clinic</fullName>
        <active>true</active>
        <description>Physical location for placing a clinic. Used for Near-Site Opportunities</description>
        <label>Clinic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Customer Account. This represents the HQ or Parent of the Office Location Accounts</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office_Location</fullName>
        <active>true</active>
        <description>A Child to a Customer Account</description>
        <label>Office Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payer</fullName>
        <active>true</active>
        <label>Payer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payer_Office_Location</fullName>
        <active>true</active>
        <description>A Child to a Payer Account</description>
        <label>Payer Office Location</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>